Fix footer overlapping content

--- a/frontend/src/sass/variables.sass
+++ b/frontend/src/sass/variables.sass
@@ -14,3 +14,5 @@ $steel-warrior: #e4eff7
 $border-color: #c8c8c8
 
 $filter-margin: 2em
+
+$footer-height: 4.5em
